- remove explicit UTF-8 calls [Error on load public url #2]
- add remote-debugger code
- cleanup of logging statements
Version 0.0.2
- pagenation
- image thumnails
Version 0.0.1
- Initial version