@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.layanmovie" version="0.0.2" name="layanmovie" provider-name="dmdsoftware">
+<addon id="plugin.video.layanmovie" version="0.0.2.20140314" name="layanmovie" provider-name="dmdsoftware">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="plugin.video.gdrive" version="0.2.7"/>
