@@ -1,3 +1,0 @@
-cp ~/.xbmc/addons/XBMC-layanmovie-master/default.py ./
-cp ~/.xbmc/addons/XBMC-layanmovie-master/resources/language/english/strings.xml ./resources/language/english/
-cp ~/.xbmc/addons/XBMC-layanmovie-master/resources/settings.xml ./resources/
