@@ -1,3 +1,4 @@
+- fix plugin URLs to make compliant with plugins like PseudoTV Live
 - remove explicit UTF-8 calls [Error on load public url #2]
 - add remote-debugger code
 - cleanup of logging statements
